// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconTrackNext should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-track-next "
  height={14}
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M7.72 7.85a1 1 0 0 0 0-1.41l-5-4.81A1 1 0 0 0 2 1.35a1 1 0 0 0-1 1V12a1 1 0 0 0 .28.69 1 1 0 0 0 1.41 0l5-4.81zM13 2v10a1 1 0 0 1-1 1 1 1 0 0 1-1-1V2a1 1 0 0 1 1-1 1 1 0 0 1 1 1z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconTrackNext should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-track-next test"
  height={100}
  title="title"
  viewBox="0 0 14 14"
  width={200}
>
  <path
    className="fill-color"
    d="M7.72 7.85a1 1 0 0 0 0-1.41l-5-4.81A1 1 0 0 0 2 1.35a1 1 0 0 0-1 1V12a1 1 0 0 0 .28.69 1 1 0 0 0 1.41 0l5-4.81zM13 2v10a1 1 0 0 1-1 1 1 1 0 0 1-1-1V2a1 1 0 0 1 1-1 1 1 0 0 1 1 1z"
    fill="#999"
  />
</AccessibleSVG>
`;
